portfolio comp working

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import '_global';
 
 //Pages
-@import '_nav';
-@import '_content';
-@import '_lightbox';
-@import '_footer';
+@import 'modules/_nav';
+@import 'modules/_content';
+@import 'modules/_lightbox';
+@import 'modules/_footer';
