--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -1,3 +1,19 @@
+h2.title-line {
+    display: table;
+    white-space: nowrap;
+    &:before, &:after {
+      border-top: 1px solid $black;
+      content: '';
+      display: table-cell;
+      position: relative;
+      top: 0.5em;
+      width: 50%;
+    }
+    &:before { right: 1.5%; }
+    &:after { left: 1.5%; }
+}
+
+
 blockquote,body,dd,div,dl,dt,fieldset,form,h1,h2,h3,h4,h5,h6,input,li,ol,p,pre,td,textarea,th,ul{
     padding:0;
     margin:0
@@ -73,11 +89,17 @@ abbr,acronym{
 }
 
 h3{
+    $primary-font: 'Josefin Sans', sans-serif;
     font-size:5em;
     text-align:center;
     color:#fff;
     font-weight:700
 }
+
+h1, h2, h4, h5{
+    $primary-font: 'Josefin Sans', sans-serif;
+}
+
 #logo{
     position:fixed;
     top:20px;
@@ -137,8 +159,8 @@ div h1 {
 
 // Button
 .draw-border {
-    box-shadow: inset 0 0 0 2px $black;
-    color: $black;
+    box-shadow: inset 0 0 0 2px $white;
+    color: $white;
     transition: color 0.25s 0.0833333333s;
     position: relative;
   }
@@ -193,5 +215,5 @@ div h1 {
   }
   
   .btn:focus {
-    outline: 2px dotted $black;
+    outline: 2px dotted $white;
   }
