--- a/sass/modules/_content.scss
+++ b/sass/modules/_content.scss
@@ -1,7 +1,144 @@
+//Landing Section
+#landing-section{
+  h1 {
+    font-family: $primary-font;
+    font-weight: bolder;
+    text-align: center;
+    text-transform: uppercase;
+    color: $yellow;
+  }
+  h2 {
+    font-family: $secondary-font;
+    text-align: center;
+    color: $white;
+    font-size: 1.5em;
+  }
+
+  .landing-social {
+    margin-top: 1.5em;
+    text-align: center;
+  }
+
+  .landing-social a {
+    color: $white;
+    padding-left: 0.3em;
+    font-size: 2em;
+    text-decoration: none;
+  }
+
+  .landing-social a:hover {
+    color: $yellow;
+  }
+
+.scroll-down {
+  opacity: 1;
+  -webkit-transition: all .5s ease-in 3s;
+  transition: all .5s ease-in 3s;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  margin-left: -16px;
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 2px solid #FFF;
+  background-size: 14px auto;
+  border-radius: 50%;
+  z-index: 2;
+  -webkit-animation: bounce 2s infinite 2s;
+  animation: bounce 2s infinite 2s;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  transform: scale(1)
+}
+
+.scroll-down:before {
+    position: absolute;
+    top: calc(50% - 8px);
+    left: calc(50% - 6px);
+    transform: rotate(-45deg);
+    display: block;
+    width: 12px;
+    height: 12px;
+    content: "";
+    border: 2px solid white;
+    border-width: 0px 0 2px 2px;
+}
+
+@keyframes bounce {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-10px);
+    -ms-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  60% {
+    -webkit-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    transform: translateY(-5px);
+  }
+}
+
+}
+// About Section
+#about-section{
+
+  h2 {
+    margin-top: 1em;
+  }
+
+  .draw-border {
+    box-shadow: inset 0 0 0 2px $black;
+    color: $black
+  }
+
+  .draw-border:hover {
+    color: red;
+  }
+
+  .draw-border:hover::before, .draw-border:hover::after {
+    border-color: red;
+  }
+
+  img {
+    padding: 1em;
+    width: 350px;
+  }
+
+  img {
+    transition: filter .5s ease-in-out;
+    -webkit-filter: grayscale(0%); 
+    filter: grayscale(0%); 
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    width: 300px;
+  }
+
+  img:hover {
+    -webkit-filter: grayscale(100%); 
+    filter: grayscale(100%); 
+  }
+
+}
+
 // Portfolio Section
 #portfolio-section{
-    padding: 1.2em;
+  
+  h2{
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
 
+  ul {
+    padding-left: 1.2em;
+  }
     img {
         cursor: pointer;
         transition: filter .5s ease-in-out;
@@ -9,6 +146,7 @@
         filter: grayscale(0%); 
         margin: 1em;
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+        width: 300px;
       }
     
       img:hover {
@@ -18,20 +156,85 @@
       }
 }
 
+//Process Section
+#process-section {
+
+  h2{
+    padding-bottom: 1em;
+  }
+
+  h4 {
+    font-size: 1.5em;
+    text-align: center;
+  }
+
+  span {
+    cursor: pointer;
+  }
+
+  .process-list {
+    font-family: $secondary-font;
+    text-align: center;
+  }
+
+  .process-list li {
+    font-weight: bolder;
+    text-transform: uppercase;
+    display: inline;
+    font-size: 1.5em;
+    padding: 10px;
+  }
+
+  img {
+    cursor: pointer;
+    margin: 0.5em;
+    width: 60px;
+  }
+
+  
+
+  @media screen and (min-width: $bp-md) {
+    .process-list {
+      font-family: $secondary-font;
+      font-size: 2em;
+      display: block;
+    }
+  
+    .process-list li {
+      padding-bottom: 1.2em;
+    }
+   }
+}
+
 //Contact Section
 #contact-section {
-  padding: 2em;
   font-family: 'Lato', georgia;
   font-size: 25px;
-  color: rgba(255, 255, 255, 1);
+  color: $yellow;
   background-color: rgba(236, 181, 62, 0.95);
   text-align: center;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
 
-  h3 {
+  h2.title-line {
+    margin-bottom: 1em;
     color: $white;
-  }
+    text-transform: uppercase;
+    font-weight: 800;
+    font-family: $primary-font;
+    display: table;
+    white-space: nowrap;
+    &:before, &:after {
+      border-top: 1px solid $grey;
+      content: '';
+      display: table-cell;
+      position: relative;
+      top: 0.5em;
+      width: 50%;
+    }
+    &:before { right: 1.5%; }
+    &:after { left: 1.5%; }
+}
   
   #contact-form {
     max-width: 90%;
@@ -51,12 +254,12 @@
     text-align: center;
     background: none;
     font-weight: 700;
-    font-family: 'Lato', georgia;
+    font-family: $secondary-font;
     font-size: 25px;
-    color: rgba(255, 255, 255, 1);
+    color: $grey;
     max-width: 90%;
     padding: 1rem;
-    border: 2px dashed rgba(255, 255, 255, 0);
+    border: 2px solid rgba(255, 255, 255, 0);
     box-sizing: border-box;
     cursor: text;
   }
@@ -72,7 +275,7 @@
   
   textarea:focus {
     background-color: rgba(255, 255, 255, 0.2);
-    border: 2px dashed rgba(255, 255, 255, 1);
+    border: 2px solid $grey;
   }
   
   textarea:focus:required:valid {
@@ -85,16 +288,16 @@
   }
   
   input {
-    border-bottom: 2px dashed rgba(255, 255, 255, 0.5);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   }
   
   input:required,
   textarea:required {
-    border-bottom: 2px dashed rgba(255, 255, 255, 0.5);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   }
   
   input:focus {
-    border-bottom: 2px dashed rgba(255, 255, 255, 1);
+    border-bottom: 2px solid $grey;
     background-color: rgba(255, 255, 255, 0.2);
   }
   
@@ -110,16 +313,15 @@
     text-align: center;
     color: rgba(255, 255, 255, 0.4);
     font-style: italic;
-    font-weight: 400;
+    font-weight: 300;
   }
   
   :-moz-placeholder {
     /* Firefox 18- */
-    
     text-align: center;
     color: rgba(255, 255, 255, 0.4);
     font-style: italic;
-    font-weight: 400;
+    font-weight: 300;
   }
   
   ::-moz-placeholder {
@@ -128,14 +330,14 @@
     text-align: center;
     color: rgba(255, 255, 255, 0.4);
     font-style: italic;
-    font-weight: 400;
+    font-weight: 300;
   }
   
   :-ms-input-placeholder {
     text-align: center;
     color: rgba(255, 255, 255, 0.4);
     font-style: italic;
-    font-weight: 400;
+    font-weight: 300;
   }
   
   .expanding {
@@ -167,15 +369,4 @@
     opacity: 0;
   }
   
-  .website {
-    opacity: 1;
-    font-size: 16px;
-    color: white;
-    position: relative;
-    text-align: center;
-    display: block;
-    margin-top: 7%;
-    
-  }
-
 }
