taking out router

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -3,7 +3,7 @@
 $white: #f7f7f7;
 $grey: #dfdfdf;
 $black: #1c1c1c;
-$yellow: #FDD953;
+$yellow: rgb(252, 210, 57);
 
 $primary-font: 'Josefin Sans', sans-serif;
 $secondary-font: 'Lato', sans-serif;
