--- a/sass/modules/_content.scss
+++ b/sass/modules/_content.scss
@@ -160,6 +160,7 @@
 #process-section {
 
   h2{
+    padding-top: 1em;
     padding-bottom: 1em;
   }
 
@@ -189,6 +190,19 @@
     cursor: pointer;
     margin: 0.5em;
     width: 60px;
+    padding-bottom: 0.8em;
+  }
+
+  .process-title {
+    text-transform: uppercase;
+    font-weight: bolder;
+    color: $black;
+    font-size: 1.8em;
+    letter-spacing: 0.4em;
+  }
+
+  .process-info {
+    font-family: $secondary-font;
   }
 
   
@@ -343,30 +357,18 @@
   .expanding {
     vertical-align: top;
   }
-  
-  .send-icn {
-    fill: rgba(255, 255, 255, 1)
+
+  .draw-border {
+    box-shadow: inset 0 0 0 2px $white;
+    color: $white;
   }
-  
-  .send-icn:hover {
-    fill: rgba(0, 0, 0, 1);
-    cursor: pointer;
+
+  .draw-border:hover {
+    color: $yellow;
   }
-  
-  button {
-    background: none;
-    border: none;
-    outline: none;
-    margin: 2vmax;
-  }
-  
-  button:hover small {
-    opacity: 1;
-  }
-  
-  small {
-    display: block;
-    opacity: 0;
+
+  .draw-border:hover::before, .draw-border:hover::after {
+    border-color: $yellow;
   }
   
 }
