--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -1,55 +1,111 @@
+$blackColor: #1c1c1c;
+$yellow: #fdd935;
+$primary-font: 'Josefin Sans', sans-serif;
+$secondary-font: 'Lato', sans-serif;
 
-#logo{
-    position:fixed;
-    top:20px;
-    left:20px;
-    color:#fff;
-    font-weight:700;
-    z-index:99;
-    font-size:1.7em;
-    -webkit-font-smoothing:antialiased;
-    -moz-font-smoothing:antialiased
-}
-
-#menu-line{
-    position:absolute;
-    bottom:-4px;
-    left:0;
-    width:159px;
-    height:2px;
-    background:#fff
-}
-
-#menu{
-    position:fixed;
-    top:20px;
-    right:20px;
-    z-index:70;
-    -webkit-font-smoothing:antialiased;
-    -moz-font-smoothing:antialiased;
-    letter-spacing:1px;
-    font-size:1em;
-    background-color: rgba(31, 31, 31, 0.831);
-}
-#menu li{
-    display:inline-block;
-    margin:10px 0;
-    position:relative
-}
-#menu a{
-    color:#fff;
-    padding:0 1.1em 1.1em 1.1em
-}
-
-#menu li.active a:after{
-    content:'';
-    margin:0 1.1em 0 1.1em;
-    height:2px;
-    background:#fff;
-    display:block;
-    position:absolute;
-    bottom:-6px;
-    left:0;
-    right:0;
-    display:block
+.nav-menu {
+  h1 {
+    color: $blackColor;
+    font-family: $primary-font;
+    position: fixed;
+    top: 40px;
+    left: 40px;
+    z-index: 9999;
+    font-size: 20px;
+    font-weight: 900;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    > span {
+      text-transform: none;
+      opacity: .5;
+      font-weight: 300;
+      font-size: 12px;
+    }
+  }
+    input + label {
+      position: fixed;
+      top: 40px;
+      right: 40px;
+      height: 20px;
+      width: 15px; 
+      z-index: 5;
+      span {
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 50%;
+        margin-top: -1px;
+        left: 0;
+        display: block;
+        background: $blackColor;
+        transition: .5s;
+      }
+      span:first-child {
+        top: 3px; 
+      }
+      span:last-child {
+        top: 16px; 
+      }      
+    }
+    label:hover {
+      cursor: pointer;
+    }
+    input:checked + label { 
+      span {
+        opacity: 0;
+        top: 50%;
+      }
+      span:first-child {
+        opacity: 1;
+        transform: rotate(405deg);
+      }
+      span:last-child {
+        opacity: 1;
+        transform: rotate(-405deg);
+      }
+    }
+    input ~ nav {
+      background: $yellow;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      z-index: 3;
+      transition: .5s;
+      transition-delay: .5s;
+      overflow: hidden;
+      > ul {
+        text-align: center;
+        position: absolute;
+        top: 35%;
+        left: 20%;
+        right: 20%;
+        > li {
+          opacity: 0;
+          transition: .5s;
+          transition-delay: 0s;
+          > a {
+            text-decoration: none;
+            text-transform: uppercase;
+            color: $blackColor;
+            font-weight: 700;
+            font-family: $secondary-font;
+            display: block;
+            padding: 30px;
+          }
+        }
+      }
+    }
+    input:checked ~ nav { 
+      height: 100%;
+      transition-delay: 0s;
+      > ul {
+        > li {
+          opacity: 1;
+          transition-delay: .5s;
+        }
+      }
+    } 
 }
